tests/baselines/reference/for-of39.errors.txt
tests/cases/conformance/es6/for-ofStatements/for-of39.ts(1,37): error TS2322: Type 'number' is not assignable to type 'boolean'.


==== tests/cases/conformance/es6/for-ofStatements/for-of39.ts (1 errors) ====
    var map = new Map([["", true], ["", 0]]);
                                        ~
!!! error TS2322: Type 'number' is not assignable to type 'boolean'.
    for (var [k, v] of map) {
        k;
        v;
    }